# awescholar

./: .env.example  .gitignore  README.ai.md  README.md  README_cn.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md  CONTRIBUTING.md
docs/todo/: anno_0526.md  refactor_0528.md
logo/: hero_prompt.md
resources/skills/awescholar/: SKILL.md
src/awescholar/: __init__.py  archive.py  categories.py  cli.py  config.py  data_fields.py  db.py  llm.py  pipeline.py  prompts.py  readme.py  record.py  rss.py  schemas.py  search.py  utils.py
tests/: test_cli.py  test_config.py  test_db.py  test_pipeline.py  test_record.py  test_schemas.py  test_utils.py
